rancher/0-create-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: rancher
  labels:
    name: rancher
