rancher/1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/"
        prometheus.io/port: "80"
    spec:
      containers:
        - name: rancher
          image: rancher/rancher:v2.5.2
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1'
          volumeMounts:
            - name: log-path
              mountPath: /var/log/app
          ports:
            - name: http
              containerPort: 8080
      #          readinessProbe:
      #            httpGet:
      #              path: /demo/status
      #              port: http
      #            initialDelaySeconds: 20
      #            periodSeconds: 15
      #            failureThreshold: 6
      #          livenessProbe:
      #            httpGet:
      #              path: /demo/status
      #              port: http
      #            initialDelaySeconds: 120
      volumes:
        - name: log-path
          hostPath:
            path: /var/log/app
