rancher/2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  labels:
    app: rancher
spec:
  selector:
    app: rancher
  type: ClusterIP
  ports:
    - name: http
      port: 8080
